minifi-datagenerator.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: minifi-datagenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minifi-datagenerator
  template:
    metadata:
      labels:
        app: minifi-datagenerator
    spec:
      containers:
      - name: minifi-datagenerator-container
        image: sunmanregistry.azurecr.io/minifi-java:0.6.0
        ports:
        - containerPort: 10080
          name: http
        - containerPort: 6065
          name: listenhttp  
        resources:
          requests:
            cpu: ".5"
            memory: "500Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
