minifi-deamonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: minifi
spec:
  selector:
    matchLabels:
      app: minifi
  template:
    metadata:
      labels:
        app: minifi
    spec:
      containers:
      - name: minifi-container
        image: sunmanregistry.azurecr.io/java-minifi:latest
        ports:
        - containerPort: 10080
          name: http
        - containerPort: 6065
          name: listenhttp  
        resources:
          requests:
            cpu: ".5"
            memory: "500Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
