nifi-stateless-deamonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nifi-stateless
spec:
  selector:
    matchLabels:
      app: nifi-stateless
  template:
    metadata:
      labels:
        app: nifi-stateless
    spec:
      containers:
      - name: nifi-stateless-container
        image: apache/nifi-stateless
        ports:
        - containerPort: 10080
          name: http
        - containerPort: 6065
          name: listenhttp  
        resources:
          requests:
            cpu: "2"
            memory: "10Gi"
          limits:
            cpu: "2"
            memory: "10Gi"
        args: ["RunFromRegistry", "Continuous", "--json", "{\"registryUrl\":\"http://nifiregistry-service\",\"bucketId\":\"82c8e982-4224-4bca-8bca-004de1f33472\",\"flowId\":\"6b1816ba-74c9-43f9-8221-92883551fd1c\"}"]
