efm_full_egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  podSelector:
    matchLabels:
      app: efm
  ingress:
  - {}
  policyTypes:
  - Ingress
