efm_no_ingress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: efm
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: efm
  ingress: []
